--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
     </header>
 
     <main>
-        <h1>Em breve...</h1>
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="" class="foto">
+            <h1>Pedro Vinhola</h1>
+            <p>Formado em Ciência da Computação, com especialização em docência superior, desenvolvimento web e inteligência artificial. Apaixonado por tecnologias e sempre em busca de novos desafios. Atualmente, atuo como professor e desenvolvedor, compartilhando conhecimento atravéz de cursos online e preojetos de códigos aberto.</p>
+            <div id="social">
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/Vinholaa" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.youtube.com/@vinhola-z7q" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.instagram.com/pedro_vinholaa/" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-solid fa-gamepad"></i></a>
+            </div>
+        </section>
+        <section id="detalhes"></section>
     </main>
 
     <footer>
